--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -53,4 +53,64 @@
 </nav>
 
 <h1 id="main-title">KPI Event</h1>
+<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci explicabo eum fugiat magnam temporibus sapiente doloremque ex harum? Modi, totam. Cumque aliquam commodi voluptate aperiam culpa rem temporibus a magnam.</h2>
 <my-carousel></my-carousel>
+
+<div class="bs-example">
+  <div class="panel panel-default">
+    <!-- Default panel contents -->
+    <div class="panel-heading">Panel heading</div>
+
+    <!-- Table -->
+    <table class="table">
+      <thead>
+        <tr>
+          <th >#</th>
+          <th>Date</th>
+          <th>Name</th>
+          <th>Description</th>
+          <th>map</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>01.10.16</td>
+          <td>Otto</td>
+          <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error delectus explicabo sed autem facilis eveniet, deserunt culpa numquam rerum, odit placeat nam, a reprehenderit iste voluptate veritatis molestiae nostrum dolorem!</td>
+          <td>
+            <div class="flip3D">
+              <div class="back"><button type="button" class="btn btn-default"><a routerLink="/map">show map</a></button></div>
+              <div class="front">Box 1 - Front</div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>02.10.16</td>
+          <td>Thornton Thorntonfdvjk xjc</td>
+          <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas dolor, deserunt laboriosam aut cupiditate consequatur, dicta incidunt, molestiae totam at eos minima perspiciatis consectetur unde cum! Autem, asperiores dicta aspernatur.</td>
+          <td>
+            <div class="flip3D">
+              <div class="back">Box 1 - Back</div>
+              <div class="front">Box 1 - Front</div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>03.10.16</td>
+          <td>the Bird</td>
+          <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo amet beatae hic blanditiis repudiandae nobis consequatur voluptate doloremque earum eos veniam fugiat ullam dolorum non magnam, esse, incidunt ratione. Eveniet!</td>
+          <td> 
+            <div class="flip3D">
+            <div class="back">Box 1 - Back</div>
+            <div class="front">Box 1 - Front</div>
+          </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<router-outlet></router-outlet>
