--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -1,116 +1,3 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
+<my-menu></my-menu>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-<h1 id="main-title">KPI Event</h1>
-<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci explicabo eum fugiat magnam temporibus sapiente doloremque ex harum? Modi, totam. Cumque aliquam commodi voluptate aperiam culpa rem temporibus a magnam.</h2>
-<my-carousel></my-carousel>
-
-<div class="bs-example">
-  <div class="panel panel-default">
-    <!-- Default panel contents -->
-    <div class="panel-heading">Panel heading</div>
-
-    <!-- Table -->
-    <table class="table">
-      <thead>
-        <tr>
-          <th >#</th>
-          <th>Date</th>
-          <th>Name</th>
-          <th>Description</th>
-          <th>map</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>01.10.16</td>
-          <td>Otto</td>
-          <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error delectus explicabo sed autem facilis eveniet, deserunt culpa numquam rerum, odit placeat nam, a reprehenderit iste voluptate veritatis molestiae nostrum dolorem!</td>
-          <td>
-            <div class="flip3D">
-              <div class="back"><button type="button" class="btn btn-default"><a routerLink="/map">show map</a></button></div>
-              <div class="front">Box 1 - Front</div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>02.10.16</td>
-          <td>Thornton Thorntonfdvjk xjc</td>
-          <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas dolor, deserunt laboriosam aut cupiditate consequatur, dicta incidunt, molestiae totam at eos minima perspiciatis consectetur unde cum! Autem, asperiores dicta aspernatur.</td>
-          <td>
-            <div class="flip3D">
-              <div class="back">Box 1 - Back</div>
-              <div class="front">Box 1 - Front</div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>03.10.16</td>
-          <td>the Bird</td>
-          <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo amet beatae hic blanditiis repudiandae nobis consequatur voluptate doloremque earum eos veniam fugiat ullam dolorum non magnam, esse, incidunt ratione. Eveniet!</td>
-          <td> 
-            <div class="flip3D">
-            <div class="back">Box 1 - Back</div>
-            <div class="front">Box 1 - Front</div>
-          </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <router-outlet></router-outlet>
