--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -26,7 +26,7 @@
           <td>{{event.description}}</td>
           <td>
             <div class="flip3D">
-              <div class="back"><button type="button" class="btn btn-default"><a routerLink="/map">show map</a></button></div>
+              <div class="back"><button type="button" class="btn btn-default"><a routerLink="/maps/{{event.id}}" routerLinkActive="active">show map</a></button></div>
               <div class="front">{{event.address}}</div>
             </div>
           </td>
