work with map API

--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -3,4 +3,9 @@
   <li class="active">Карта</li>
 </ol>
 
-<div id="gmap"></div>
+
+<h2>{{event.title}}</h2>
+<h3>{{event.address}}</h3>
+<div id="gmap">
+<button type="button" class="btn btn-default">Визначити місцезнаходження</button>	
+</div>
