--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,8 @@
+.bs-example{
+	margin: 30px;
+}
+
+
 #main-title{
 	text-align: center;
 }
@@ -12,10 +17,9 @@ h2{
 
 
 
-
-
 .flip3D{ width:240px; height:75px; margin:10px; float:left; }
 .flip3D > .front{
+	text-align: center;
 	position:absolute;
 	transform: perspective( 600px ) rotateY( 0deg );
 	background: rgba(0, 0, 0, 0.2); width:240px; height:75px; border-radius: 5px;
